kube/08-worker-ruby.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-ruby
  namespace: palad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-ruby
  template:
    metadata:
      labels:
        app: worker-ruby
    spec:
      serviceAccountName: palad-runtime
      containers:
        - name: worker-ruby
          image: web
          imagePullPolicy: IfNotPresent
          command: ["bin/temporal_worker"]
