kube/05-temporal-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal-ui
  namespace: palad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal-ui
  template:
    metadata:
      labels:
        app: temporal-ui
    spec:
      containers:
        - name: temporal-ui
          image: temporalio/ui:2.43.3
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: temporal-ui
  namespace: palad
spec:
  selector:
    app: temporal-ui
  ports:
    - name: http
      port: 8080
      targetPort: 8080
