kube/09-traefik.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: palad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      containers:
        - name: traefik
          image: traefik:v3.3
          args:
            - "--api.dashboard=true"
            - "--api.insecure=true"
            - "--providers.kubernetescrd=true"
            - "--providers.kubernetesingress=true"
            - "--entrypoints.traefik.address=:8090"
            - "--entrypoints.traefik.http.tls=true"
            - "--entrypoints.web.address=:80"
            - "--entrypoints.websecure.address=:443"
            - "--log.level=DEBUG"
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: dashboard
              containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: palad
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 80
    - name: websecure
      port: 443
      targetPort: 443
    - name: dashboard
      port: 8090
      targetPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: palad
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: dashboard-https
      port: 443
      targetPort: 8090
