kube/13-traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: palad
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.palad-app.orb.local`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls: {}
